update to JDA 5 - Localized every string