@@ -2,12 +2,12 @@ package org.EricRamirezS.jdacommando.command.types;
 
 import net.dv8tion.jda.api.entities.GuildChannel;
 import net.dv8tion.jda.api.entities.IMentionable;
-import net.dv8tion.jda.api.events.message.guild.GuildMessageReceivedEvent;
+import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
+import org.EricRamirezS.jdacommando.command.customizations.LocalizedFormat;
 import org.EricRamirezS.jdacommando.command.enums.ArgumentTypes;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.text.MessageFormat;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -20,42 +20,46 @@ public final class ChannelArgument extends Argument<GuildChannel> {
     }
 
     @Override
-    public @Nullable String validate(@NotNull GuildMessageReceivedEvent event, @NotNull String arg) {
-        if (arg.matches ("^(?:<#)?([0-9]+)>?$")){
-            Optional<GuildChannel> channel =event.getGuild().getChannels().stream().filter(c -> c.getAsMention().equals(arg)).findFirst();
-            if (channel.isPresent()){
-                return oneOf(channel.get());
-            } else {
-                return MessageFormat.format("No he podido encontrar el {0} indicado", "canal");
-            }
+    public @Nullable String validate(@NotNull MessageReceivedEvent event, @NotNull String arg) {
+        if (arg.matches("^(?:<#)?(\\d+)>?$")) {
+            Optional<GuildChannel> channel = event.getGuild().getChannels().stream()
+                    .filter(c -> c.getAsMention().equals(arg))
+                    .findFirst();
+            if (channel.isPresent())
+                return oneOf(channel.get(), event, IMentionable::getAsMention, "Argument_Channel_OneOf");
+            else return LocalizedFormat.format("Argument_Channel_NotFound");
         }
-        List<GuildChannel> channels = event.getGuild().getChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
-        if (channels.size() == 0) return "No he podido encontrar el canal indicado";
-        if (channels.size() == 1) return oneOf(channels.get(0));
-        channels = event.getGuild().getChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
-        if (channels.size() == 1) return oneOf(channels.get(0));
-        return "Se han encontrado multiples canales, se más específico, por favor.";
+        List<GuildChannel> channels = event.getGuild().getChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).toList();
+        if (channels.size() == 0) return LocalizedFormat.format("Argument_Channel_NotFound");
+        if (channels.size() == 1)
+            return oneOf(channels.get(0), event, IMentionable::getAsMention, "Argument_Channel_OneOf");
+        channels = event.getGuild().getChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).toList();
+        if (channels.size() == 1)
+            return oneOf(channels.get(0), event, IMentionable::getAsMention, "Argument_Channel_OneOf");
+        return LocalizedFormat.format("Argument_Channel_TooMany", event);
     }
 
     @Override
-    public @Nullable GuildChannel parse(@NotNull GuildMessageReceivedEvent event, @NotNull String arg) {
-        if (arg.matches ("^(?:<#)?([0-9]+)>?$")){
-            Optional<GuildChannel> channel =event.getGuild().getChannels().stream().filter(c -> c.getAsMention().equals(arg)).findFirst();
-            if (channel.isPresent()){
+    public @Nullable GuildChannel parse(@NotNull MessageReceivedEvent event, @NotNull String arg) {
+        if (arg.matches("^(?:<#)?(\\d+)>?$")) {
+            Optional<GuildChannel> channel = event.getGuild().getChannels().stream()
+                    .filter(c -> c.getAsMention().equals(arg))
+                    .findFirst();
+            if (channel.isPresent()) {
                 return channel.get();
             }
         }
-        List<GuildChannel> channels = event.getGuild().getChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
+        List<GuildChannel> channels = event.getGuild().getChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT)))
+                .collect(Collectors.toList());
         if (channels.size() == 0) return null;
         if (channels.size() == 1) return channels.get(0);
-        channels = event.getGuild().getChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
+        channels = event.getGuild().getChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT)))
+                .collect(Collectors.toList());
         if (channels.size() == 1) return channels.get(0);
         return null;
-    }
-
-    private @Nullable String oneOf(GuildChannel channel){
-        if (isOneOf(channel))return null;
-        return MessageFormat.format("Por favor, ingrese una de las siguientes opciones: \n{0}",
-                getValidValues().stream().map(IMentionable::getAsMention).collect(Collectors.joining("\n")));
     }
 }
