@@ -1,17 +1,16 @@
 package org.EricRamirezS.jdacommando.command.types;
 
-import net.dv8tion.jda.api.entities.IMentionable;
+import net.dv8tion.jda.api.entities.Channel;
 import net.dv8tion.jda.api.entities.TextChannel;
-import net.dv8tion.jda.api.events.message.guild.GuildMessageReceivedEvent;
+import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
+import org.EricRamirezS.jdacommando.command.customizations.LocalizedFormat;
 import org.EricRamirezS.jdacommando.command.enums.ArgumentTypes;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.text.MessageFormat;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public final class TextChannelArgument extends Argument<TextChannel> {
 
@@ -20,42 +19,43 @@ public final class TextChannelArgument extends Argument<TextChannel> {
     }
 
     @Override
-    public String validate(@NotNull GuildMessageReceivedEvent event, @NotNull String arg) {
-        if (arg.matches ("^(?:<#)?([0-9]+)>?$")){
-            Optional<TextChannel> channel =event.getGuild().getTextChannels().stream().filter(c -> c.getAsMention().equals(arg)).findFirst();
-            if (channel.isPresent()){
-                return oneOf(channel.get());
+    public String validate(@NotNull MessageReceivedEvent event, @NotNull String arg) {
+        if (arg.matches("^(?:<#)?(\\d+)>?$")) {
+            Optional<TextChannel> channel = event.getGuild().getTextChannels().stream()
+                    .filter(c -> c.getAsMention().equals(arg)).findFirst();
+            if (channel.isPresent()) {
+                return oneOf(channel.get(), event, Channel::getAsMention, "Argument_TextChannel_OneOf");
             } else {
-                return MessageFormat.format("No he podido encontrar el {0} indicado", "canal");
+                return LocalizedFormat.format("Argument_TextChannel_NotFound", event);
             }
         }
-        List<TextChannel> channels = event.getGuild().getTextChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
-        if (channels.size() == 0) return "No he podido encontrar el canal indicado";
-        if (channels.size() == 1) return oneOf(channels.get(0));
-        channels = event.getGuild().getTextChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
-        if (channels.size() == 1) return oneOf(channels.get(0));
-        return "Se han encontrado multiples canales, se más específico, por favor.";
-    }
-
-    private @Nullable String oneOf(TextChannel textChannel) {
-        if (isOneOf(textChannel))return null;
-        return MessageFormat.format("Por favor, ingrese una de las siguientes opciones: \n{0}",
-                getValidValues().stream().map(IMentionable::getAsMention).collect(Collectors.joining("\n")));
-
+        List<TextChannel> channels = event.getGuild().getTextChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).toList();
+        if (channels.size() == 0) return LocalizedFormat.format("Argument_TextChannel_NotFound", event);
+        if (channels.size() == 1)
+            return oneOf(channels.get(0), event, Channel::getAsMention, "Argument_TextChannel_OneOf");
+        channels = event.getGuild().getTextChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).toList();
+        if (channels.size() == 1)
+            return oneOf(channels.get(0), event, Channel::getAsMention, "Argument_TextChannel_OneOf");
+        return LocalizedFormat.format("Argument_TextChannel_TooMany", event);
     }
 
     @Override
-    public @Nullable TextChannel parse(@NotNull GuildMessageReceivedEvent event, @NotNull String arg) {
-        if (arg.matches ("^(?:<#)?([0-9]+)>?$")){
-            Optional<TextChannel> channel =event.getGuild().getTextChannels().stream().filter(c -> c.getAsMention().equals(arg)).findFirst();
-            if (channel.isPresent()){
+    public @Nullable TextChannel parse(@NotNull MessageReceivedEvent event, @NotNull String arg) {
+        if (arg.matches("^(?:<#)?(\\d+)>?$")) {
+            Optional<TextChannel> channel = event.getGuild().getTextChannels().stream()
+                    .filter(c -> c.getAsMention().equals(arg)).findFirst();
+            if (channel.isPresent()) {
                 return channel.get();
             }
         }
-        List<TextChannel> channels = event.getGuild().getTextChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
+        List<TextChannel> channels = event.getGuild().getTextChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).contains(arg.toLowerCase(Locale.ROOT))).toList();
         if (channels.size() == 0) return null;
         if (channels.size() == 1) return channels.get(0);
-        channels = event.getGuild().getTextChannels().stream().filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
+        channels = event.getGuild().getTextChannels().stream()
+                .filter(c -> c.getName().toLowerCase(Locale.ROOT).equals(arg.toLowerCase(Locale.ROOT))).toList();
         if (channels.size() == 1) return channels.get(0);
         return null;
     }
